Add note in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+python-dotenv
 discord.py
 motor
+# Make sure to install the "Microsoft C++ Build tools"
+# You can download an installer from
+# https://visualstudio.microsoft.com/visual-cpp-build-tools/
 lru-dict
-python-dotenv
