--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-dotenv
 discord.py
+discordUtils
 motor
 # Make sure to install the "Microsoft C++ Build tools"
 # You can download an installer from
